feature1_impl first valid test